# DataEngineer

./: .gitignore  docker-compose.yaml  dockerfile.airflow  dockerfile.dbt  dockerfile.django  sshd_config
NBA_airflow/config/: airflow.cfg
NBA_airflow/dags/: PlayoffStat.py  advanced_data.py
NBA_backend/: Readme.md  pyproject.toml
NBA_backend/NBA/: Utils.py  middleware.py  models.py  urls.py  views.py
NBA_backend/news_project/: settings.py  urls.py
NBA_dbt/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
NBA_dbt/models/player_advanced_data/: calculate.sql  schema.yml
NBA_dbt/models/players/: PlayerAggregate.sql  schema.yml
