[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Xuzhejia",email = "Xuzhejia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-mysql (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
